@@ -60,6 +60,7 @@ settings_export_encoded=Encoded:
 settings_import_description=Paste a plain JSON string or an encoded string.
 settings_back=Back
 settings_confirm=Confirm
+settings_alias=Alias
 settings_add_item=Add Item
 settings_add_fluid=Add Fluid
 settings_add_technology=Add Research
@@ -89,6 +90,7 @@ message_invalid_import_json=[color=red]Invalid import string. This string is not
 message_invalid_import_type=[color=red]Invalid import string. Invalid type: [/color]
 message_invalid_import_quantity=[color=red]Invalid import string. Invalid quantity: [/color]
 message_invalid_import_next=[color=red]Invalid import string. Invalid next value: [/color]
+message_invalid_import_missing_field=[color=red]Invalid import string. Missing field: [/color]
 message_invalid_next=[color=red]Invalid next value: [/color]
 message_invalid_initial_preset=[color=red]Milestones failed to load the initial preset from Mod Settings and will fall back to auto-detection. Error was:[/color]
 message_migration_130_groups=[img=milestones_main_icon_white] Milestones 1.3.0 now supports grouping milestones in categories, but your existing list will not be modified.\nReload your preset in the settings (__CONTROL__milestones_toggle_gui__) if you want to use groups.
