@@ -12,10 +12,13 @@ function convert_and_validate_imported_json(import_string)
         return nil, {"milestones.message_invalid_import_json"}
     end
 
-    local valid_categories = {'item', 'fluid', 'technology', 'kill', 'group'}
+    local valid_categories = {'item', 'fluid', 'technology', 'kill', 'group', 'alias'}
     for _, milestone in pairs(imported_milestones) do
         if not table_contains(valid_categories, milestone.type) then
             return nil, {"", {"milestones.message_invalid_import_type"}, milestone.type}
+        end
+        if type(milestone.name) ~= "string" then
+            return nil, {"", {"milestones.message_invalid_import_missing_field"}, "name"}
         end
         if milestone.type ~= 'group' then
             local num = tonumber(milestone.quantity)
@@ -28,6 +31,9 @@ function convert_and_validate_imported_json(import_string)
                     return nil, {"", {"milestones.message_invalid_import_next"}, milestone.next}
                 end
             end
+        end
+        if milestone.type == 'alias' and type(milestone.equals) ~= "string" then
+            return nil, {"", {"milestones.message_invalid_import_missing_field"}, "equals"}
         end
     end
 
